--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -15,6 +15,7 @@
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
+    z-index: 50;
 
     .link{
         font-size: 1.7rem;
