--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -47,13 +47,13 @@
         align-items: center;
         .button{
             position: relative;
-            padding: .5rem 3rem;
+            padding: 0 3rem;
             font-size: 1.7rem;
-            transition: all .5s ease;
+            border: 1px solid transparent;
+            transition: all 1s ease;
             
             &:hover{
-                background-color: #333;
-                color: #ccc;
+                border-color: #333;
             }
         }
         .icon-container{
@@ -86,49 +86,320 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
     &.active {
-        .text{
-            .content{
+        .content{
+            opacity: 1;
+            .text{
                 transform: translateX(0px);
                 opacity: 1;
             }
-            .button{
+            .link{
                 transform: translateX(0px);
                 opacity: 1;
             }
         }
     }
-    .text {
+
+    .image{
+        width: 80%;
+        height: 80%;
+        background: radial-gradient(circle 50vw at 100% 20%, #efefef 5%, transparent), 
+        url('../../../assets/images/home/groups.jpg') left bottom/ cover no-repeat;
+    }
+    .content {
         position: absolute;
         top: 7rem;
         right: 300px;
         display: flex;
+        max-width: 70%;
+        padding: 2rem;
+        background-color: #d2d2d2a4;
         flex-direction: column;
         align-items: flex-end;
-        .content{
+        opacity: 0;
+        transition: all 1.5s ease-out .5s;
+        .text{
             width: 80%;
             font-size: 1.5rem;
             margin-left: auto;
             transform: translateX(-60px);
             opacity: 0;
-            transition: all 2s ease-out .5s;
+            transition: all 1s ease-out .5s;
         }
-        .button{
+        .link{
             margin: 1rem 6rem 0 0;
             transform: translateX(30px);
             opacity: 0;
-            transition: all 1s ease-out 1s;
+            transition: all 1s ease-out .5s;
          }
     }
     
+}
+
+.ProgramsScreen{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    
+    &.active {
+        .content{
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+
     .image{
         width: 80%;
         height: 80%;
+        margin-left: auto;
+        background: radial-gradient(circle 50vw at -20% 90%, #efefef 10%, transparent), 
+        url('../../../assets/images/home/programs.jpg') right bottom/ cover no-repeat;
+    }
+    
+    .content {
+        position: absolute;
+        top: 7rem;
+        left: 7rem;
+        padding: 3rem;
+        background-color: #d2d2d2a4;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        opacity: 0;
+        transform: translateX(-50px);
+        transition: all 1s ease-out .5s;
+        .text{
+            font-size: 1.5rem;
+            opacity: 1;
+        }
+        .link{
+            margin-top: 2rem;
+            opacity: 1;
+         }
+    }
+}
+
+
+.ClassesScreen{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    &.active {
         .content{
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle 50vw at 100% 20%, #efefef 10%, transparent), 
-            url('../../../assets/images/groups.jpg') left bottom/ cover no-repeat;
+            transform: translateX(0);
+            opacity: 1;
+        }
+    }
+
+    .image{
+        width: 80%;
+        height: 90%;
+        margin-right: auto;
+        background: radial-gradient(circle 40vw at 100% 90%, #efefef 10%, transparent), 
+        url('../../../assets/images/home/classes.jpg') left top/ cover no-repeat;
+    }
+    
+    .content {
+        position: absolute;
+        bottom: 7rem;
+        right: 300px;
+        padding: 3rem;
+        background-color: #d2d2d2a4;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        opacity: 0;
+        transform: translateX(50px);
+        transition: all 1s ease-out .5s;
+        .text{
+            font-size: 1.5rem;
+            opacity: 1;
+        }
+        .link{
+            margin-top: 2rem;
+            opacity: 1;
+         }
+    }
+}
+
+
+.ToursScreen{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    &.active {
+        .content{
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    .image{
+        width: 80%;
+        height: 90%;
+        margin-right: auto;
+        background: radial-gradient(circle 40vw at 100% 90%, #efefef 10%, transparent), 
+        url('../../../assets/images/home/tours.jpg') left top/ cover no-repeat;
+    }
+    
+    .content {
+        position: absolute;
+        bottom: 7rem;
+        right: 300px;
+        padding: 1rem;
+        background-color: #d2d2d2a4;
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        opacity: 0;
+        transform: translateY(50px);
+        transition: all 1s ease-out .5s;
+        .text{
+            font-size: 1.5rem;
+        }
+        .link{
+            margin: 2rem 2rem 0 auto;
+         }
+    }
+}
+
+.GalleryScreen{
+    display: flex; 
+    flex-flow: column nowrap;
+    &.active {
+        .content{
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+    .images {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem;
+        .image{
+            position: relative;
+            box-shadow: 0px 20px 20px rgba(0,0,0,.5);
+            cursor: pointer;
+            filter: grayscale(60%);
+            transition: all .7s ease-out;
+            &:hover{
+                filter: grayscale(0%);
+                box-shadow: 0px 30px 30px rgba(0,0,0,.4);
+            }
+        }
+        .image-1{
+            width: 370px;
+            height: 500px;
+            background: url('../../../assets/images/home/gallery-1.jpg') left top/ cover no-repeat;
+            transform: rotate(-5deg);
+            z-index: 3;
+            &:hover {
+                z-index: 10;
+                transform: rotate(-5deg) scale(1.03);
+            }
+        }
+        .image-2{
+            width: 500px;
+            height: 370px;
+            background: url('../../../assets/images/home/gallery-2.jpg') left top/ cover no-repeat;
+            transform: rotate(3deg);
+            z-index: 2;
+            &:hover {
+                z-index: 10;
+                transform: rotate(3deg) scale(1.03);
+            }
+        }
+        .image-3{
+            width: 370px;
+            height: 500px;
+            background: url('../../../assets/images/home/gallery-3.jpg') left top/ cover no-repeat;
+            transform: rotate(12deg) translateY(20px);
+            z-index: 1;
+            &:hover {
+                z-index: 10;
+                transform: rotate(12deg) translateY(20px) scale(1.03);
+            }
+        }
+    }
+    .content {
+        flex-grow: 1;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: all 1.5s ease-out .5s;
+        .text{
+            font-size: 1.5rem;
+        }
+        .link{
+            margin-top: 3rem;
+         }
+    }
+}
+
+
+.AboutScreen{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    &.active {
+        .content{
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    .image{
+        width:80%;
+        height: 90%;
+        margin: 0 auto;
+        background: url('../../../assets/images/home/about.png') left top/ cover no-repeat;
+        box-shadow: 0 15px 20px -5px;
+    }
+    
+    .content {
+        flex-grow: 1;
+        padding: 1rem;
+        display: flex;
+        margin: 0 auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        opacity: 0;
+        transition: all 1.5s ease-out .5s;
+        .text{
+            font-size: 1.5rem;
+        }
+        .link{
+            margin-top: 3rem;
+         }
+         .footer {
+            align-self: stretch;
+            padding-top: 3rem;
+            font-size: 2rem;
+            color: #333;
+            display: flex;
+            flex-flow: row;
+            align-items: center;
+            justify-content: space-between;
+            a{
+                transition: all .3s ease-out;
+                &:hover{
+                    transform: scale(1.3)
+                }
+            }
         }
     }
 }
