--- a/src/components/shared/styles.scss
+++ b/src/components/shared/styles.scss
@@ -33,7 +33,8 @@
             top: -100px;
             left: 0;
             right: 0;
-            background: linear-gradient(to top, #444 33.33%, #efefef 66.66%);
+            // background: linear-gradient(to top, #444 33.33%, #efefef 66.66%);
+            background: linear-gradient(to top, #444 33.33%, transparent 66.66%);
             z-index: -1;
             transition: all .5s ease;
         }
