--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -288,10 +288,10 @@
             position: relative;
             box-shadow: 0px 20px 20px rgba(0,0,0,.5);
             cursor: pointer;
-            filter: grayscale(60%);
+            filter: grayscale(40%) brightness(1.2);
             transition: all .7s ease-out;
             &:hover{
-                filter: grayscale(0%);
+                filter: grayscale(0%) brightness(1);
                 box-shadow: 0px 30px 30px rgba(0,0,0,.4);
             }
         }
