Add keyDown handler for screen scroll

--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -38,6 +38,10 @@
     padding: 0 1rem;
     width: 300px;
     z-index: 100;
+    .fontLoader{
+        visibility: hidden;
+        position: absolute;
+    }
 }
 .Screens{
     width: 100%;
