--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -352,6 +352,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    padding-bottom: 4rem;
     
     &.active {
         .content{
@@ -361,7 +362,7 @@
     }
 
     .image{
-        width:80%;
+        width:70%;
         height: 90%;
         margin: 0 auto;
         background: url('../../../assets/images/home/about.png') left top/ cover no-repeat;
