--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -3,12 +3,20 @@
     height: 100vh;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    position: relative;
     
     .header {
-
+       height: 60px;
+       position: fixed;
+       left: 0;
+       top: 0;
+       right: 0;
     }
     .content {
-
+        margin-top: 60px;
+        & > div {
+            min-height: calc(100vh - 60px);
+        }
     }
 }
 
@@ -17,4 +25,6 @@
     height: 100vh;
     overflow-x: hidden;
     scroll-behavior: smooth;
+}
+.Groups {
 }
