--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #efefef;
+    background-color: #93939385;
     .logo {
         font-size: 1rem;
         display: flex;
