--- a/src/components/shared/styles.scss
+++ b/src/components/shared/styles.scss
@@ -46,3 +46,20 @@
     bottom: 0;
     left: 0;
 }
+
+.Spinner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #efefefa4;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .elem{
+        .circle{
+            color: #333;
+        }
+    }
+}
