--- a/src/components/shared/styles.scss
+++ b/src/components/shared/styles.scss
@@ -8,6 +8,10 @@
             font-weight: bold;
         }
     }
+    .fontLoader{
+        visibility: hidden;
+        position: absolute;
+    }
 }
 
 .LinkButton{
@@ -45,6 +49,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: -1;
 }
 
 .Spinner {
