--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -4,7 +4,9 @@
 .ProgramsScreen,
 .ToursScreen,
 .GalleryScreen,
-.HomeScreen{
+.HomeScreen,
+.ArticlesScreen,
+.ContactsScreen {
     position: relative;
     width: 100%;
     height: 100%;
@@ -118,20 +120,20 @@
         flex-direction: column;
         align-items: flex-end;
         opacity: 0;
-        transition: all 1.5s ease-out .5s;
+        transition: all 1.5s ease .5s;
         .text{
             width: 80%;
             font-size: 1.5rem;
             margin-left: auto;
             transform: translateX(-60px);
             opacity: 0;
-            transition: all 1s ease-out .5s;
+            transition: all 1s ease .5s;
         }
         .link{
             margin: 1rem 6rem 0 0;
             transform: translateX(30px);
             opacity: 0;
-            transition: all 1s ease-out .5s;
+            transition: all 1s ease .5s;
          }
     }
     
@@ -169,7 +171,7 @@
         align-items: center;
         opacity: 0;
         transform: translateX(-50px);
-        transition: all 1s ease-out .5s;
+        transition: all 1s ease .5s;
         .text{
             font-size: 1.5rem;
             opacity: 1;
@@ -214,7 +216,7 @@
         align-items: center;
         opacity: 0;
         transform: translateX(50px);
-        transition: all 1s ease-out .5s;
+        transition: all 1s ease .5s;
         .text{
             font-size: 1.5rem;
             opacity: 1;
@@ -259,7 +261,7 @@
         align-items: center;
         opacity: 0;
         transform: translateY(50px);
-        transition: all 1s ease-out .5s;
+        transition: all 1s ease .5s;
         .text{
             font-size: 1.5rem;
         }
@@ -289,7 +291,7 @@
             box-shadow: 0px 20px 20px rgba(0,0,0,.5);
             cursor: pointer;
             filter: grayscale(40%) brightness(1.2);
-            transition: all .7s ease-out;
+            transition: all .7s ease;
             &:hover{
                 filter: grayscale(0%) brightness(1);
                 box-shadow: 0px 30px 30px rgba(0,0,0,.4);
@@ -337,7 +339,7 @@
         align-items: center;
         justify-content: center;
         opacity: 0;
-        transition: all 1.5s ease-out .5s;
+        transition: all 1.5s ease .5s;
         .text{
             font-size: 1.5rem;
         }
@@ -352,7 +354,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-bottom: 4rem;
+    // padding-bottom: 4rem;
     
     &.active {
         .content{
@@ -374,17 +376,18 @@
         padding: 1rem;
         display: flex;
         margin: 0 auto;
+        margin-top: 2rem;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 80%;
         opacity: 0;
-        transition: all 1.5s ease-out .5s;
+        transition: all 1.5s ease .5s;
         .text{
             font-size: 1.5rem;
         }
         .link{
-            margin-top: 3rem;
+            margin-top: 2rem;
          }
          .footer {
             align-self: stretch;
@@ -396,11 +399,42 @@
             align-items: center;
             justify-content: space-between;
             a{
-                transition: all .3s ease-out;
+                transition: all .3s ease;
                 &:hover{
                     transform: scale(1.3)
                 }
             }
         }
     }
+}
+
+.ArticlesScreen {
+
+    &.active {
+        .content{
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+    &__wrapper {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        background: url('../../../assets/images/home/articles.jpg') bottom left / cover no-repeat;
+
+        .content {
+            margin-top: 5rem;
+            transition: all 1s ease .5s;
+            transform: translateY(30px);
+            opacity: 0;
+            .text {
+                font-size: 1.2rem;
+                margin-bottom: 2rem;
+            }
+        }
+    }
+}
+
+.ContactsScreen {
+    
 }
