--- a/src/components/Programs/styles.module.scss
+++ b/src/components/Programs/styles.module.scss
@@ -12,27 +12,19 @@
         margin-bottom: 10rem;
         box-shadow: 0 5px 30px rgba(51, 51, 51, 0.486);
         .image__wrapper {
-
+            position: relative;
             .image {
+                position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 3rem;
-                font-weight: bold;
                 background-position: center center;
                 background-size: cover;
-
-                p{
-                    display: inline-block;
-                    padding: 1rem;
-                }
-
-                &_selected{
-                    p{
-                        text-shadow: white 0 0 30px ;
-                    }
+                opacity: 0;
+                transition: all .5s linear;
+                &__active {
+                    opacity: 1;
                 }
             }
         }
