Styles move to modules

--- a/src/components/Groups/styles.module.scss
+++ b/src/components/Groups/styles.module.scss
@@ -1,7 +1,7 @@
 .root {
     .image_container{
         position: relative;
-        min-height: 300px;
+        min-height: 20rem;
         
         .image{
             width :100%;
