--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -4,7 +4,7 @@
     right: 0;
     bottom: 0;
     padding: 0 1rem;
-    width: 300px;
+    width: 20rem;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -30,7 +30,7 @@
     top: 2rem;
     right: 0;
     padding: 0 1rem;
-    width: 300px;
+    width: 20rem;
     z-index: 100;
     .fontLoader{
         visibility: hidden;
