--- a/src/components/Programs/styles.module.scss
+++ b/src/components/Programs/styles.module.scss
@@ -14,6 +14,7 @@
         background-color: #efefef;
         .image__wrapper {
             position: relative;
+            min-height: 20rem;
             .image {
                 position: absolute;
                 top: 0;
