--- a/src/components/shared/PageTitle.module.scss
+++ b/src/components/shared/PageTitle.module.scss
@@ -1,20 +1,20 @@
-.title__wrapper{
+.header {
     font-size: 3rem;
     border-bottom: 1px solid gray;
     margin: 1rem 0;
     padding: 0 2rem;
     
-    .title{
+    .tile {
         opacity: 0;
         transform: translateX(40px);
         animation: apearFromRight 2s ease forwards;
     }
 }
-
-.description{
-    font-size: 1.3rem;
+.subHeader {
+    font-size: 1.5rem;
     margin-top: 2rem;
 }
+
 
 @keyframes apearFromRight {
     0% {
