--- a/src/components/shared/PageTitle.module.scss
+++ b/src/components/shared/PageTitle.module.scss
@@ -4,7 +4,7 @@
     margin: 1rem 0;
     padding: 0 2rem;
     
-    .tile {
+    .title {
         opacity: 0;
         transform: translateX(40px);
         animation: apearFromRight 2s ease forwards;
