--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,9 @@ html {
   @media screen and (max-width: 1600px) {
     font-size: 12px;
   }
+  @media screen and (max-width: 980px) {
+    font-size: 10px;
+  }
 }
 
 body {
