--- a/src/components/Tours/TourContainer.module.scss
+++ b/src/components/Tours/TourContainer.module.scss
@@ -26,6 +26,10 @@
         margin-bottom: 3rem;
     }
     .content {
+        @media screen and (max-width: 960px) {
+            padding: 0 2rem;
+        }
+        
         & > div {
             margin: 2rem auto;
         }
@@ -38,6 +42,9 @@
             span {
                 font-weight: bold;
             }
+        }
+        .details {
+            text-align: left;
         }
         .datetime{
             display: flex;
