--- a/src/pages/styles/modules/articles.module.scss
+++ b/src/pages/styles/modules/articles.module.scss
@@ -1,3 +1,33 @@
-.root {
-    
+.container {
+    margin: 4rem 0;
+    opacity: 0;
+    transform: translateY(30px);
+    animation: show 1s ease .5s forwards;
+    .section {
+        background-color: #efefef;
+        padding: 2rem;
+        box-shadow: 0 5px 30px rgba(51, 51, 51, 0.486);
+    }
+    .title {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+    .link{
+        text-align: center;
+        a {
+            margin: 0 auto;
+            width: 100%;
+        }
+    }
+}
+
+@keyframes show {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
