--- a/src/components/Programs/styles.module.scss
+++ b/src/components/Programs/styles.module.scss
@@ -6,33 +6,34 @@
     .header {
         text-align: center;
         font-size: 3rem;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
     .container{
-        margin-bottom: 10rem;
+        margin-bottom: 15rem;
         box-shadow: 0 5px 30px rgba(51, 51, 51, 0.486);
         background-color: #efefef;
         .image__wrapper {
             position: relative;
-            min-height: 20rem;
+            min-height: 30rem;
             .image {
-                position: absolute;
-                top: 0;
-                left: 0;
+                // position: absolute;
+                // top: 0;
+                // left: 0;
                 width: 100%;
                 height: 100%;
                 background-position: center center;
                 background-size: cover;
-                opacity: 0;
-                transition: all .5s linear;
-                &__active {
-                    opacity: 1;
-                }
+                // opacity: 0;
+                // transition: all .5s linear;
+                // &__active {
+                //     opacity: 1;
+                // }
             }
         }
             
         .content {
             padding: 4rem 2rem;
+            font-size: 1.5rem;
 
             .ltr{
                 text-align: left;
