--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -1,9 +1,9 @@
 .root {
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #93939385;
+    // background-color: #93939385;
 }
 .logo {
     font-size: 1rem;
