--- a/src/pages/styles/modules/about.module.scss
+++ b/src/pages/styles/modules/about.module.scss
@@ -1,5 +1,6 @@
 .root {
     padding: 3rem 10rem;
+    margin-top: 2rem;
     @media screen and (max-width: 1280px) {
         padding: 3rem 8rem;
     }
@@ -12,6 +13,16 @@
     .container {
         .user {
             padding: 5rem 10rem;
+            opacity: 0;
+            transform: translateY(30px);
+            animation: show 1s ease forwards;
+            &:nth-child(1){
+                animation-delay: .5s;
+            }
+            &:nth-child(2){
+                animation-delay: .7s;
+            }
+
             @media screen and (max-width: 1280px) {
                 padding: 3rem 4rem;
             }
@@ -41,6 +52,17 @@
             }
         }
     }
-
 }
+
+@keyframes show {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 
