--- a/src/pages/styles/modules/gallery.module.scss
+++ b/src/pages/styles/modules/gallery.module.scss
@@ -1,3 +1,9 @@
 .root {
     
 }
+.content {
+    padding: 4rem 5rem;
+    @media screen and (max-width: 600px) {
+        padding: 1rem 1rem;
+    }
+}
