--- a/src/components/Programs/styles.module.scss
+++ b/src/components/Programs/styles.module.scss
@@ -1,6 +1,6 @@
 .root{
     opacity: 0;
-    transform: translateY(40px);
+    // transform: translateY(40px);
     animation: show 1s ease .5s forwards;
 
     .header {
@@ -16,18 +16,10 @@
             position: relative;
             min-height: 30rem;
             .image {
-                // position: absolute;
-                // top: 0;
-                // left: 0;
                 width: 100%;
                 height: 100%;
                 background-position: center center;
                 background-size: cover;
-                // opacity: 0;
-                // transition: all .5s linear;
-                // &__active {
-                //     opacity: 1;
-                // }
             }
         }
             
@@ -70,10 +62,10 @@
 @keyframes show {
     0% {
         opacity: 0;
-        transform: translateY(40px);
+        // transform: translateY(40px);
     }
     100% {
         opacity: 1;
-        transform: translateY(0);
+        // transform: translateY(0);
     }
 }
