--- a/src/components/shared/NavigationLink.scss
+++ b/src/components/shared/NavigationLink.scss
@@ -6,6 +6,7 @@
     font-size: 2rem;
     color: #444;
     transition: all .5s ease-out;
+    // color: #efefef;
 
     &:hover{
         transform: translateX(20px)
