--- a/src/components/Tours/TourContainer.module.scss
+++ b/src/components/Tours/TourContainer.module.scss
@@ -5,8 +5,8 @@
     background-color: #efefef;
     box-shadow: 0 5px 30px rgba(51, 51, 51, 0.22);
     opacity: 0;
-    transform: translateX(-20px);
-    animation: show .8s ease .5s forwards;
+    transform: translateY(20px);
+    animation: show .8s ease  forwards;
 
     @media screen and (max-width: 960px) {
         margin: 3rem 0;
@@ -96,10 +96,10 @@
 @keyframes show {
     0% {
         opacity: 0;
-        transform: translateX(-20px);
+        transform: translateY(20px);
     }
     100% {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
