--- a/src/pages/styles/modules/groups.module.scss
+++ b/src/pages/styles/modules/groups.module.scss
@@ -11,7 +11,7 @@
     background-color: white;
     opacity: 0;
     transform: translateY(30px);
-    animation: apearFromBottom 1s ease .5s forwards;
+    animation: apearFromBottom 1s ease  forwards;
     box-shadow: 0 20px 30px -10px #333;
 }
 
