Register modal for group

--- a/src/pages/styles/modules/layout.module.scss
+++ b/src/pages/styles/modules/layout.module.scss
@@ -4,6 +4,10 @@
     overflow-x: hidden;
     scroll-behavior: smooth;
     position: relative;
+    &::-webkit-scrollbar{
+        width: 0;
+    }
+    
 }
 .header {
     height: 60px;
