--- a/src/components/shared/Spinner.module.scss
+++ b/src/components/shared/Spinner.module.scss
@@ -1,13 +1,14 @@
 .root {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     background-color: #efefefa4;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 300;
     .spinner {
         .circle {
             color: #333;
