--- a/src/pages/styles/modules/articles.module.scss
+++ b/src/pages/styles/modules/articles.module.scss
@@ -21,6 +21,20 @@
     }
 }
 
+.blogLink {
+    display: block;
+    &__header{
+        font-size: 2rem;
+        padding: 2rem;
+    }
+    &__image{
+        min-height: 20rem;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+}
+
 @keyframes show {
     0% {
         opacity: 0;
