--- a/src/routes/Layout/pages/styles/Programs.module.scss
+++ b/src/routes/Layout/pages/styles/Programs.module.scss
@@ -6,6 +6,7 @@
 }
 .programs {
     padding: 5rem;
+    padding-top: 2rem;
     max-width: 1920px;
     margin: 0 auto;
     @media screen and (max-width: 600px) {
