--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -10,6 +10,9 @@
     align-items: center;
     justify-content: center;
     z-index: 50;
+    @media screen and (max-width: 600px) {
+        width: 6rem;
+    }
 
     .link{
         font-size: 1.7rem;
@@ -27,11 +30,15 @@
 }
 .Lang {
     position: fixed;
-    top: 2rem;
+    top: 3rem;
     right: 0;
     padding: 0 1rem;
     width: 20rem;
     z-index: 100;
+    @media screen and (max-width: 600px) {
+        width: 6rem;
+        padding: 0;
+    }
     .fontLoader{
         visibility: hidden;
         position: absolute;
