--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -10,8 +10,9 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 7rem;
+    padding: 7rem 4rem;
     padding-right: 20rem;
+    padding-bottom: 4rem;
     @media screen and (max-width: 600px) {
         padding: 2rem;
     }
@@ -24,6 +25,10 @@
     flex-direction: column;
     background: url('../../../assets/images/home/home1.jpg') center center/ cover no-repeat fixed;
     .logo{
+        position: fixed;
+        left: 2rem;
+        top: 1.5rem;
+        z-index: 100;
         display: flex;
         flex-flow: row wrap;
         align-items: center;
@@ -41,22 +46,13 @@
         flex-grow: 1;
         flex-flow: column nowrap;
         align-items: center;
-        // justify-content: center;
         width: 100%;
         margin: 1rem auto;
         padding-top: 6rem;
-        // background:
-        // radial-gradient(circle 30vw at 110% 50%, #efefef 5%, transparent), 
-        // radial-gradient(circle 30vw at -10% 50%, #efefef 5%, transparent), 
-        // linear-gradient(to bottom, #fcfcfc99,  #fcfcfc48),
-        // radial-gradient(circle 30vw at center 10%, #efefef 0%, transparent), 
-        // url('../../../assets/images/home/home2.jpg') center center/ cover no-repeat fixed;
-        // background-color:  #fcfcfc99;
         
         .title {
             background-color: #fcfcfc99;
             padding: 2rem;
-            // color: white;
         }
         .info{
             color: #444;
@@ -130,7 +126,7 @@
 
     .image{
         width: 80%;
-        height: 80%;
+        height: 90%;
         background: radial-gradient(circle 30vw at 100% 20%, #efefef 5%, transparent), 
         url('../../../assets/images/home/groups.jpg') center center/ cover no-repeat;
     }
@@ -178,7 +174,7 @@
 
     .image{
         width: 80%;
-        height: 80%;
+        height: 90%;
         margin-left: auto;
         background: radial-gradient(circle 50vw at -20% 90%, #efefef 10%, transparent), 
         url('../../../assets/images/home/programs.jpg') right bottom/ cover no-repeat;
@@ -304,6 +300,20 @@
             transform: translateY(0);
             opacity: 1;
         }
+        .images {
+            .image {
+
+                &-1{
+                    
+                }
+                &-2{
+
+                }
+                &-3{
+
+                }
+            }
+        }
     }
     .images {
         display: flex;
@@ -388,7 +398,7 @@
     }
 
     .image{
-        width:70%;
+        width: 80%;
         height: 90%;
         margin: 0 auto;
         background: url('../../../assets/images/home/about.png') center top/ cover no-repeat;
@@ -452,7 +462,7 @@
             transform: translateY(30px);
             opacity: 0;
             .text {
-                font-size: 1.2rem;
+                font-size: 1.5rem;
                 margin-bottom: 2rem;
             }
         }
