Add Classes CRUD for admin

--- a/src/components/Classes/ClassContainer.module.scss
+++ b/src/components/Classes/ClassContainer.module.scss
@@ -43,7 +43,7 @@
                 font-weight: bold;
             }
         }
-        .details {
+        .description {
             text-align: left;
         }
         .datetime{
