--- a/src/components/Tours/TourContainer.module.scss
+++ b/src/components/Tours/TourContainer.module.scss
@@ -43,7 +43,7 @@
                 font-weight: bold;
             }
         }
-        .details {
+        .description {
             text-align: left;
         }
         .datetime{
