--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -259,6 +259,7 @@
         margin-right: auto;
         background: radial-gradient(circle 30vw at 100% 100%, #efefef 10%, transparent), 
         url('../../../assets/images/home/classes.jpg') left top/ cover no-repeat;
+        filter: saturate(80%);
         @media screen and (max-width: 600px) {
             width: 100%;
             height: 92%;
