--- a/src/routes/Layout/pages/styles/About.module.scss
+++ b/src/routes/Layout/pages/styles/About.module.scss
@@ -27,6 +27,8 @@
                 padding: 3rem 4rem;
             }
             .image {
+                margin: 0 auto;
+                max-width: 350px;
                 min-height: 300px;
                 background-size: cover;
                 background-position: center center;
