--- a/src/components/Classes/ClassContainer.module.scss
+++ b/src/components/Classes/ClassContainer.module.scss
@@ -26,9 +26,9 @@
         margin-bottom: 3rem;
     }
     .content {
-        @media screen and (max-width: 960px) {
+        // @media screen and (max-width: 960px) {
             padding: 0 2rem;
-        }
+        // }
         
         & > div {
             margin: 2rem auto;
@@ -43,9 +43,9 @@
                 font-weight: bold;
             }
         }
-        .description {
-            text-align: left;
-        }
+        // .description {
+        //     text-align: left;
+        // }
         .datetime{
             display: flex;
             flex-flow: row nowrap;
