--- a/src/components/Tours/TourContainer.module.scss
+++ b/src/components/Tours/TourContainer.module.scss
@@ -26,9 +26,10 @@
         margin-bottom: 3rem;
     }
     .content {
-        @media screen and (max-width: 960px) {
-            padding: 0 2rem;
-        }
+        padding: 0 2rem;
+        // @media screen and (max-width: 960px) {
+        //     padding: 0 2rem;
+        // }
         
         & > div {
             margin: 2rem auto;
@@ -44,7 +45,7 @@
             }
         }
         .description {
-            text-align: left;
+            // text-align: left;
         }
         .datetime{
             display: flex;
