--- a/src/components/shared/Subscribe.module.scss
+++ b/src/components/shared/Subscribe.module.scss
@@ -1,7 +1,7 @@
 .root {
     position: fixed;
     left: 2rem;
-    bottom: 0;
+    bottom: 1rem;
     padding: .5rem 1rem;
     font-size: 2rem;
     cursor: pointer;
