--- a/src/components/shared/Subscribe.module.scss
+++ b/src/components/shared/Subscribe.module.scss
@@ -10,10 +10,7 @@
     z-index: 300;
     background-color: #4f8c4f;
     &:hover {
-        background-color: #4f8c4f88;
-        .button{
-            color: #333;
-        }
+        background-color: #3d6d3d;
     }
     .button {
         color: white;
