Add green background on info page

--- a/src/components/Home/screens/styles.scss
+++ b/src/components/Home/screens/styles.scss
@@ -132,6 +132,21 @@
         padding: 3rem;
         font-size: 1.5rem;
     }
+    .wrapper {
+        // background-color: #3d6d3d;
+        // background-color: #4f8c4f;
+        background-color: #0f5812b3;
+        padding: 5rem 3rem;
+        color: white;
+
+        .title{
+            font-size: 2rem;
+            margin-bottom: 2rem;
+        }
+        .subtitle {
+            font-size: 1.3rem;
+        }
+    }
 }
 
 .GroupsScreen{
@@ -418,7 +433,7 @@
             background: url('../../../assets/images/home/gallery-1.jpg') left top/ cover no-repeat;
             transform: rotate(-5deg);
             z-index: 3;
-            transition: opacity .5s ease .2s, transform .7s ease, filter .7s ease;
+            transition: opacity .5s ease .5s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(-5deg) scale(1.03);
@@ -430,7 +445,7 @@
             background: url('../../../assets/images/home/gallery-2.jpg') left top/ cover no-repeat;
             transform: rotate(3deg);
             z-index: 2;
-            transition: opacity .5s ease .35s, transform .7s ease, filter .7s ease;
+            transition: opacity .5s ease .6s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(3deg) scale(1.03);
@@ -442,7 +457,7 @@
             background: url('../../../assets/images/home/gallery-3.jpg') left top/ cover no-repeat;
             transform: rotate(12deg) translateY(20px);
             z-index: 1;
-            transition: opacity .5s ease .5s, transform .7s ease, filter .7s ease;
+            transition: opacity .5s ease .7s, transform .7s ease, filter .7s ease;
             &:hover {
                 z-index: 10;
                 transform: rotate(12deg) translateY(20px) scale(1.03);
