Add course details and register modal

--- a/src/components/Admin/routes/styles.module.scss
+++ b/src/components/Admin/routes/styles.module.scss
@@ -15,6 +15,9 @@
     border-radius: 5px;
     overflow: hidden;
     font-size: 1.3rem;
+    &__content {
+        padding: 1rem;
+    }
 
     &__datetime {
         display: flex;
