--- a/src/routes/Layout/pages/styles/Programs.module.scss
+++ b/src/routes/Layout/pages/styles/Programs.module.scss
@@ -15,7 +15,7 @@
 }
 .compare {
     &__title{
-        margin: 2rem auto;
+        margin: 4rem auto 2rem auto;
         font-size: 2rem;
     }
     &__image {
