--- a/src/routes/Layout/pages/styles/ProgramDetails.module.scss
+++ b/src/routes/Layout/pages/styles/ProgramDetails.module.scss
@@ -1,10 +1,61 @@
 .root {
-    padding-top: 3rem;
-    .compare {
-        position: relative;
-        img{
-            display: block;
+    padding: 3rem 3rem;
+    .title {
+        font-size: 3rem;
+        margin-bottom: 2rem;
+    }
+    .image{
+        &__wrapper{
+            position: relative;
+        }
+        &__content{
             width: 100%;
+            height: 100%;
+            min-height: 30rem;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+    }
+    .info {
+        padding: 3rem;
+        & > div {
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 1.5rem;
+        }
+        .register{
+            justify-content: center;
+            & > div {
+                padding: 0 3rem;
+                font-size: 1.5rem;
+                text-transform: uppercase;
+            }
+            &__open {
+                border: 1px solid #333;
+                cursor: pointer;
+                transition: all .5s ease;
+                &:hover {
+                    background-color: #444;
+                    color: white;
+                }
+            }
+            &__closed {
+                border: 1px solid gray;
+                color: gray;
+            }
+        }
+    }
+    .description {
+        margin: 2rem auto;
+        &__title {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        &__content {
+            font-size: 1.5rem;
         }
     }
 }
