--- a/src/routes/Layout/Layout.module.scss
+++ b/src/routes/Layout/Layout.module.scss
@@ -18,6 +18,7 @@
     z-index: 100;
 }
 .main {
+    min-height: calc(100vh - 60px);
     margin-top: 60px;
     padding: 0 2rem;
     position: relative;
