--- a/src/routes/Layout/pages/styles/Contacts.module.scss
+++ b/src/routes/Layout/pages/styles/Contacts.module.scss
@@ -45,6 +45,18 @@
     }
 }
 
+.development {
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 1.2rem;
+}
+
 @keyframes show {
     0% {
         opacity: 0;
